--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,21 @@ rand = "0.8"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 
 tokio = { version = "1", features = ["full"] }
-socketioxide = "0.8"
+socketioxide = "0.13.1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
-axum = "0.6"
+axum = "0.7.5"
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
-tower-http = {version = "0.4", features = ["cors"]}
+tower-http = {version = "0.5.2", features = ["cors"]}
 tower = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
 once_cell = "1.19.0"
+
+# Enable a small amount of optimization in debug mode
+[profile.dev]
+opt-level = 1
+
+# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
