--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ tower-http = {version = "0.5.2", features = ["cors"]}
 tower = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
 once_cell = "1.19.0"
+fern = "0.6.2"
+log = "0.4.21"
+time = "0.3.36"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
