--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ once_cell = "1.19.0"
 fern = "0.6.2"
 log = "0.4.21"
 time = "0.3.36"
+lazy_static = "1.4.0"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
