--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,10 +25,11 @@ time = "0.3.36"
 lazy_static = "1.4.0"
 axum-server = { version = "0.6.0", features = ["tls-rustls"] }
 dotenv = "0.15.0"
-tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
 futures-util = "0.3.30"
+clap = { version = "4.5.7", features = ["derive"] }
 # socket.io client impl
 rust_socketio = { version = "*", features = ["async"] }
+native-tls = "0.2.12"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
