--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ tracing-subscriber = "0.3"
 axum = "0.7.5"
 serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
-tower-http = {version = "0.5.2", features = ["cors"]}
+tower-http = {version = "0.5.2", features = ["cors", "compression-full"]}
 tower = "0.4"
 chrono = { version = "0.4", features = ["serde"] }
 once_cell = "1.19.0"
