--- a/.env.save
+++ b/.env.save
@@ -1,2 +1,2 @@
-CERTIFICATE_DIR="/etc/letsencrypt/live/cryptoballz.xyz/"
+CERTIFICATE_DIR="/etc/letsencrypt/live/cryptoballz.xyz-0002/"
 MODE="PRODUCTION"
