--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ wtransport = "0.4.0"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
-opt-level = 1
+debug = true 
 
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
